Fix unshowing full burger lists on safari screens

--- a/src/app/components/shared/header/mobile-header/mobile-header.component.scss
+++ b/src/app/components/shared/header/mobile-header/mobile-header.component.scss
@@ -100,7 +100,7 @@ ul {
 
 .open {
 	background-color: white;
-	height: 100vh;
+	height: 100%;
 
 	.burger {
 		div {
